新增控制面板 新增刷完业绩自动关闭游戏功能 新增结束本次刷取 适配5:4、4:3分辨率 fix开局铭徽可能导致拒绝好意失败 自动识别战斗开始 删除存银行对礼包的独立判断逻辑 加个图标~

--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -8,7 +8,7 @@ body:
     attributes:
       label: 这个问题是否已有说明？
       options:
-        - label: 我已查看[注意事项](https://gitee.com/UCPr251/zzzAuto#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9)及现有issues：[gitee](https://gitee.com/UCPr251/zzzAuto/issues) [github](https://github.com/UCPr251/zzzAuto/issues)并未发现相同问题
+        - label: 我已查看[注意事项](https://gitee.com/UCPr251/zzzAuto#%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A1%B9)及现有issues：[Gitee](https://gitee.com/UCPr251/zzzAuto/issues) [Github](https://github.com/UCPr251/zzzAuto/issues)并未发现相同问题
           required: true
 
   - type: textarea
@@ -41,7 +41,7 @@ body:
   - type: input
     attributes:
       label: 使用的版本？
-      description: 所使用的脚本的版本，如v1.4.0
+      description: 所使用的脚本的版本，如v1.5.0
       value: v1.
     validations:
       required: true
