--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -41,8 +41,15 @@ body:
   - type: input
     attributes:
       label: 使用的版本？
-      description: 所使用的脚本的版本，如v1.5.0
+      description: 所使用的脚本的版本，如v1.6.0
       value: v1.
+    validations:
+      required: true
+
+  - type: textarea
+    attributes:
+      label: 控制面板截图
+      description: 请提供Alt+C控制面板截图
     validations:
       required: true
 
